==> cmz488/chassis_ctrl/BlueSerial/Src/Serial.c <==
#include "stm32f1xx_hal.h"                  // Device header
#include "usart.h"
#include <stdio.h>
#include <stdarg.h>

char Serial_RxPacket[100];
uint8_t Serial_RxFlag;

void Serial_Init(void)
{
	// RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1, ENABLE);
	// RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);

	// GPIO_InitTypeDef GPIO_InitStructure;
	// GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
	// GPIO_InitStructure.Pin = GPIO_PIN_9;
	// GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	// HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);
	//
	// GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
	// GPIO_InitStructure.Pin = GPIO_PIN_10;
	// GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	// HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);
	//标准库的配置方法，我直接在CubeMX里配置了，所以注释掉了

	// USART_InitTypeDef USART_InitStructure;
	// USART_InitStructure.USART_BaudRate = 9600;
	// USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
	// USART_InitStructure.USART_Mode = USART_Mode_Tx | USART_Mode_Rx;
	// USART_InitStructure.USART_Parity = USART_Parity_No;
	// USART_InitStructure.USART_StopBits = USART_StopBits_1;
	// USART_InitStructure.USART_WordLength = USART_WordLength_8b;
	// USART_Init(USART1, &USART_InitStructure);
	//
	// USART_ITConfig(USART1, USART_IT_RXNE, ENABLE);
	//
	// NVIC_PriorityGroupConfig(NVIC_PriorityGroup_2);
	//
	// NVIC_InitTypeDef NVIC_InitStructure;
	// NVIC_InitStructure.NVIC_IRQChannel = USART1_IRQn;
	// NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	// NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 1;
	// NVIC_InitStructure.NVIC_IRQChannelSubPriority = 1;
	// NVIC_Init(&NVIC_InitStructure);
	//
	// USART_Cmd(USART1, ENABLE);
	__HAL_UART_ENABLE_IT(&huart2, UART_IT_RXNE);
}

void Serial_SendByte(uint8_t Byte)
{
	//USART_SendData(USART1, Byte);
	//while (USART_GetFlagStatus(USART1, USART_FLAG_TXE) == RESET);HAL_UART_Transmit(&huart1, &Byte, 1, HAL_MAX_DELAY);
	HAL_UART_Transmit(&huart2, &Byte, 1, HAL_MAX_DELAY);
}

void Serial_SendArray(uint8_t *Array, uint16_t Length)
{
	uint16_t i;
	for (i = 0; i < Length; i ++)
	{
		Serial_SendByte(Array[i]);
	}
}

void Serial_SendString(char *String)
{
	uint8_t i;
	for (i = 0; String[i] != '\0'; i ++)
	{
		Serial_SendByte(String[i]);
	}
}

uint32_t Serial_Pow(uint32_t X, uint32_t Y)
{
	uint32_t Result = 1;
	while (Y --)
	{
		Result *= X;
	}
	return Result;
}

void Serial_SendNumber(uint32_t Number, uint8_t Length)
{
	uint8_t i;
	for (i = 0; i < Length; i ++)
	{
		Serial_SendByte(Number / Serial_Pow(10, Length - i - 1) % 10 + '0');
	}
}

int fputc(int ch, FILE *f)
{
	Serial_SendByte(ch);
	return ch;
}

void Serial_Printf(char *format, ...)
{
	char String[100];
	va_list arg;
	va_start(arg, format);
	vsprintf(String, format, arg);
	va_end(arg);
	Serial_SendString(String);
}

void USART_IRQHandler(void)
{
	static uint8_t RxState = 0;
	static uint8_t pRxPacket = 0;
	if (1)
	{
		uint8_t RxData;
		HAL_UART_Receive(&huart2, &RxData, 1, HAL_MAX_DELAY);
		if (RxState == 0)
		{
			if (RxData == '[' && Serial_RxFlag == 0)
			{
				RxState = 1;
				pRxPacket = 0;
			}
		}
		else if (RxState == 1)
		{
			if (RxData == ']')
			{
				RxState = 0;
				Serial_RxPacket[pRxPacket] = '\0';
				Serial_RxFlag = 1;
			}
			else
			{
				Serial_RxPacket[pRxPacket] = RxData;
				pRxPacket ++;
			}
		}
		__HAL_UART_CLEAR_IDLEFLAG(&huart2);
		__HAL_UART_ENABLE_IT(&huart2, UART_IT_RXNE);
	}
}
